fix: scrollbar renments

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,5 @@
 :root {
   --max-width: 1100px;
-  --border-radius: 12px;
 }
 
 * {
@@ -16,13 +15,14 @@ html {
 
 html,
 body {
-  max-width: 100vw;
+  max-width: var(--max-width);
   overflow-x: hidden;
-  margin: 8px;
 }
 
 body {
   color: black;
+  margin: 0 auto;
+  padding: 8px;
 }
 
 a {
@@ -32,8 +32,6 @@ a {
 
 section {
   text-align: center;
-  max-width: 400px;
-  overflow-y: scroll;
 }
 
 h1 {
